<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Indifferent</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="url">http://meh.com</string>
    <string name="api_url">https://api.meh.com/1/current.json?apikey=%1$s</string>
    <string name="api_key">IbSXcEPjzgC0/2DNFDgwqWW1QmwcO8WR</string>
    <string name="loading">Loading…</string>
    <string name="error_something_went_wrong">Something Went Wrong</string>
    <string name="deal_title">Title</string>
    <string name="deal_features">Features</string>
    <string name="deal_specifications">Specifications</string>
    <string name="deal_fukubukuro">Fukubukuro</string>
    <string name="error_oops">Oops</string>
    <string name="action_browser">Browser</string>
    <string name="deal_price">$%1$s</string>
    <string name="deal_price_range">$%1$s - $%2$s</string>
    <string name="deal_price_buy">%1$s BUY IT.</string>
    <string name="deal_price_soldout">SOLD OUT. (was %1$s)</string>
    <string name="deal_price_toolate">TOO LATE. (was %1$s)</string>
    <string name="deal_story">Story</string>
    <string name="notify_summary">%1$s: %2$s</string>

    <string name="pref_alarm">Alarm / Notification</string>
    <string name="pref_alarm_enable_title">Enable</string>
    <string name="pref_alarm_enable_summary">Enable deal notification at midnight US/Eastern</string>
    <string name="pref_alarm_retry_title">Retry Time</string>
    <string name="pref_alarm_retry_summary">Number of minutes to retry checking for a deal: %1$s</string>
    <string-array name="pref_alarm_retry">
        <item>1 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
    </string-array>
    <string-array name="pref_alarm_retry_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string name="pref_alarm_test_title">Test Alarm Notification</string>
    <string name="deals">Deals</string>
</resources>
